--- a/Final/Bookshelf/templates/books/book_detail.html
+++ b/Final/Bookshelf/templates/books/book_detail.html
@@ -102,18 +102,15 @@
   </form>
 {% endif %}
 
-<div class="mb-3">
-      <label class="form-label">Štítky</label>
-      <div>
-        {% for checkbox in form.tags %}
-          <div class="form-check form-check-inline custom-checkbox">
-              <input type="checkbox" name="{{ checkbox.name }}" id="{{ checkbox.id_for_label }}"
-                    value="{{ checkbox.choice_value }}" class="form-check-input">
-              {{ checkbox.choice_label }}
-            </label>
-          </div>
-        {% endfor %}
-      </div>
-    </div>
+<p><strong>Štítky:</strong>
+  {% if book.tags.exists %}
+    {% for tag in book.tags.all %}
+      <span class="badge bg-secondary me-1">{{ tag.name }}</span>
+    {% endfor %}
+  {% else %}
+    <span class="text-muted">Žádné</span>
+  {% endif %}
+</p>
+
 
 {% endblock %}
