--- a/Final/Bookshelf/templates/books/book_list_partial.html
+++ b/Final/Bookshelf/templates/books/book_list_partial.html
@@ -1,35 +1,27 @@
 <div class="row">
-    {% for book in books %}
-        <div class="col-md-3 mb-3">
-            <div class="card h-100">
-                {% if book.cover_image %}
-                    <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}">
-                {% endif %}
-                <div class="card-body">
-                    <h5 class="card-title">{{ book.title }}</h5>
-                    <p class="card-text">{{ book.author }}</p>
-                    <a href="{% url 'book-detail' book.pk %}" class="btn btn-sm btn-primary">Detail</a>
+  {% for book in books %}
+    <div class="col-md-3 mb-3">
+      <a href="{% url 'book-detail' book.pk %}" class="book-card">
+        <div class="card-body d-flex flex-column justify-content-center align-items-center">
+          <h5 class="book-title">{{ book.title }}</h5>
+          <p class="book-author">{{ book.author }}</p>
 
-                    {% if book.avg_rating %}
-                        {% with book.avg_rating|floatformat:0 as stars %}
-                            <p class="text-warning mb-0 mt-2">
-                                {% for i in "12345" %}
-                                    {% if forloop.counter <= stars|add:"0" %}
-                                        ⭐
-                                    {% else %}
-                                        ☆
-                                    {% endif %}
-                                {% endfor %}
-                                ({{ book.avg_rating|floatformat:1 }}★)
-                            </p>
-                        {% endwith %}
-                    {% else %}
-                        <p class="text-muted mt-2 mb-0">Zatím nehodnoceno</p>
-                    {% endif %}
-                </div>
-            </div>
+          {% if book.avg_rating %}
+            {% with rating=book.avg_rating %}
+              <p class="text-warning mb-0 mt-2">
+                {% for _ in "12345" %}
+                  {% if rating >= forloop.counter %}⭐{% else %}☆{% endif %}
+                {% endfor %}
+                ({{ rating|floatformat:1 }}★)
+              </p>
+            {% endwith %}
+          {% else %}
+            <p class="text-muted mt-2 mb-0">Zatím nehodnoceno</p>
+          {% endif %}
         </div>
-    {% empty %}
-        <p class="text-muted">Žádné knihy nejsou k dispozici.</p>
-    {% endfor %}
+      </a>
+    </div>
+  {% empty %}
+    <p class="text-muted">Žádné knihy nejsou k dispozici.</p>
+  {% endfor %}
 </div>
